# portfolio

rust/icecli/: .env  .gitignore  Cargo.toml  README.md  diesel.toml
rust/icecli/src/: main.rs
rust/icecli/src/commands/: args.rs  mod.rs
rust/icecli/src/commands/converters/: args.rs  converters.rs  mod.rs  units.rs
rust/icecli/src/commands/converters/modules/: README.md  distance.rs  mod.rs  speed.rs  temperature.rs
rust/icecli/src/commands/developer/: args.rs  developer.rs  mod.rs
rust/icecli/src/commands/developer/modules/: tests.rs
rust/icecli/src/commands/server/: args.rs  mod.rs  server.rs
rust/icecli/src/commands/server/modules/: logs.rs  mod.rs  start.rs  stop.rs
rust/icecli/src/commands/user/: args.rs  mod.rs  user.rs
rust/icecli/src/commands/user/modules/: create.rs  delete.rs  update.rs
rust/icecli/src/commands/video/: args.rs  mod.rs  video.rs
rust/icecli/src/commands/video/modules/: create.rs  delete.rs  update.rs
rust/icecli/src/commands/view/: args.rs  mod.rs  view.rs
rust/icecli/src/commands/view/modules/: create.rs
rust/icecli/src/daemons/server/: mod.rs  server.rs
rust/icecli/src/daemons/server/core/: client_handling.rs  (+2 more)
rust/icecli/src/user/: args.rs  mod.rs
rust/icecli/src/user/ops/: user_ops.rs  video_ops.rs  view_ops.rs
rust/icecli/src/utils/: config.rs  constants.rs  file_utils.rs  logger.rs  mod.rs  utils.rs
rust/icecli/src/utils/config/: app_config.rs  database.rs  mod.rs  preferences.rs  server.rs  weatherapi.rs
rust/icecli/src/utils/database/: database.rs  schema.rs
rust/icecli/src/weatherapi/: daemon.rs
(+28 files in other folders)
