[package]
name = "icecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
config = "0.14.0"
daemonize = "0.5.0"
dotenvy = "0.15.7"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.20"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"

